--- a/scss/main.css
+++ b/scss/main.css
@@ -1,3 +1,8 @@
+/* $theme-colors: (
+    "primary": #36b3a8,
+    "secondary": #1f1f1f,
+
+);*/
 /*!
  * Bootstrap v4.6.1 (https://getbootstrap.com/)
  * Copyright 2011-2021 The Bootstrap Authors
