--- a/scss/custom_bootstrap.scss
+++ b/scss/custom_bootstrap.scss
@@ -1,7 +1,6 @@
-/* $theme-colors: (
-    "primary": #36b3a8,
-    "secondary": #1f1f1f,
+$theme-colors: (
+    "primary": #DEB887	
 
-);*/
+);
 
 @import "../bootstrap/scss/bootstrap"
