--- a/scss/custom.scss
+++ b/scss/custom.scss
@@ -48,6 +48,8 @@
 
 #historyimg {
     background-color: #e2cbac;
+    background: url("../img/history.jpg");
+    background-position: center;
 }
 
 @media screen and (max-width: 768px) {
