--- a/css/ikona.css
+++ b/css/ikona.css
@@ -1,29 +1,22 @@
 
 .ikona {
-    background: #DEB887;
-    height: 200px;
-    width: 200px;
-    line-height: 200px;
-    text-align: center;
-    color: white;
-    margin:auto;
-    animation: rotace 3s infinite;
-}
+    width: 100px;
+    height: 100px;
+    background-color: #DEB887;
+    margin: 100px auto;
+    animation: rot 1.2s infinite ease-in-out;
+  }
 
-
-@keyframes rotace {
-    0% {
-        transform: rotateY(0deg)
-    }
-
-    50% {
-        transform: rotateY(180deg)
-    }
-    51% {
-        transform: rotateX(0deg)
-    }
-
-    100% {
-        transform: rotateX(180deg)
-    }
+  @keyframes rot {
+        0% {
+        transform: perspective(120px) rotateX(0deg) rotateY(0deg);
+        } 
+        
+        50% {
+        transform: perspective(120px) rotateX(-180.1deg) rotateY(0deg);
+        }
+        
+        100% {
+        transform: perspective(120px) rotateX(-180deg) rotateY(-179.9deg);
+        }
 }
